--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <img class="logo" src="images/Webp.net-resizeimage.png" alt="logo">
         <h1>Blackbox Sound Studio</h1>
-       <nav>
+       <nav id="primary">
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
