--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ $(window).load(function() {
 <!--   header and navigation  -->
     <header>
         <div class="inner">
-            <a href="index.html"><img class="logo" src="images/Webp.net-resizeimage%20(2).png" alt="logo"></a>
+            <a href="index.html"><img id="logo" src="images/Webp.net-resizeimage%20(2).png" alt="logo"></a>
             <h1>Blackbox Sound Studio</h1>
         </div>    
        <nav id="primary">
