builds service page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $(window).load(function() {
          <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="rervices.html">Services</a></li>
+            <li><a href="services.html">Services</a></li>
             <li><a href="staff.html">Staff</a></li>
             <li><a href="book_now.html">Book Now</a></li>
         </ul>
@@ -101,7 +101,7 @@ $(window).load(function() {
           
             <p>Blackbox Sound Studio is a recording studio dedicated to modern Rap, Hip Hop, RnB, EDM, Rock, and Pop genres. Sit down with our audio engineers/producers who understand your music and have the knowledge to guide you to your best performance, our engineers are musicians who can refine your production making it exactly what you hoped it could be.</p>
     </main>
-    <aside>
+    <aside class="first">
         <div class="inner">
             <nav id="secondary">
                 <ul>
