--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@ $(window).load(function() {
         <div class="inner">
             <h2>Welcome to Blackbox Sound Studio</h2>
         </div>
-            <p>Here at Blackbox Sound our main goal is to provide you with the best recording experience out there. We have world class tools at your disposal. We have what you need to get get that disired sound.</p>
-            <p>We have a full arsenal of instruments, and gear available for our clients use. We a have multiple isolation rooms available for vocals, guitars/etc, and a drum room complete with drumkit that can works well for full band live audio and video recordings. We are fully capable of recording your next hit album. Come check us out today! <a href="about.html">More Info</a></p>
+            <p>Here at Blackbox Sound our main goal is to provide you with the best recording experience out there. We have world class tools at your disposal. We have what you need to get that desired sound.</p>
+            <p>We have a full arsenal of instruments, and gear available for our clients use. We a have multiple isolation rooms available for vocals, guitars/etc, and a drum room complete with drumkit. The drum room functions as a live room as well. Allowing us to record live albums and video recordings. We are fully capable of recording your next hit album. Come check us out today! <a href="about.html">More Info</a></p>
           
-            <p>Blackbox Sound Studio is a recording studio dedicated to modern Rap, Hip Hop, RnB, EDM, Rock, and Pop genres. Sit down with our audio engineers/producers who understand your music and have the knowledge to guide you to your best performance, our engineers are musicians who can refine your production making it exactly what you hoped it could be.</p>
+            <p>Blackbox Sound Studio is a recording studio dedicated to modern Rap, Hip Hop, RnB, EDM, Rock, Blues, Country, Jazz, and Pop genres. Sit down with our audio engineers/producers who understand your music and have the knowledge to guide you to your best performance, our engineers are musicians who can refine your production making it exactly what you hoped it could be.</p>
     </main>
-    <aside class="first">
-        <div class="inner">
+    <aside class="aside_first">
+        <div class="aside_inner">
             <nav id="secondary">
                 <ul>
                     <li><a href="ourstudio.html">Our Studio</a></li>
-                    <li><a href="equipment.html.html">Equipment</a></li>
+                    <li><a href="equipment.html">Equipment</a></li>
                     <li><a href="clients.html">Clients</a></li>
                 </ul>
                 <figure>
