--- a/thx.html
+++ b/thx.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Blackbox Studio</title>
+<title>Thank You</title>
 
 <link href="css/styles.css" type="text/css" rel="stylesheet">
        
@@ -34,7 +34,7 @@
     <main class="thx">
           <div class="inner">
               <h2>Thank You!</h2>
-              <p>We appreciate and thanking you for choosing to book studio time with Blackbox Sound Studio. We will email you shortly to get more information about your project. We will also reach out to you by phone to schedule a date and time for your session.</p>
+              <p>We appreciate and thank you for choosing to book studio time with Blackbox Sound Studio. We will email you shortly to get more information about your project. We will also reach out to you by phone to schedule a date and time for your session.</p>
             </div>
     </main>
     <aside class="map">
