--- a/book_now.html
+++ b/book_now.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Blackbox Studio</title>
+<title>Book Now</title>
 
 <link href="css/styles.css" type="text/css" rel="stylesheet">
        
