--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Blackbox Studio</title>
+<title>Services</title>
 <link href="css/styles.css" type="text/css" rel="stylesheet">
        
 </head>
